--- a/app/src/main/res/layout/activity_add_appointment_page.xml
+++ b/app/src/main/res/layout/activity_add_appointment_page.xml
@@ -46,7 +46,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/MName"
+        android:id="@+id/nameET"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_below="@id/NameTV"
@@ -79,7 +79,7 @@
         android:id="@+id/DateTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/MName"
+        android:layout_below="@id/nameET"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
@@ -87,7 +87,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MName" />
+        app:layout_constraintTop_toBottomOf="@+id/nameET" />
 
     <Button
         android:id="@+id/MTillDays"
@@ -145,7 +145,7 @@
 
 
     <Button
-        android:id="@+id/ConfirmAddedMedicine"
+        android:id="@+id/button"
         android:layout_width="250dp"
         android:layout_height="35dp"
         android:layout_marginBottom="70dp"
