--- a/app/src/main/res/layout/activity_patient_appointment_detail_page.xml
+++ b/app/src/main/res/layout/activity_patient_appointment_detail_page.xml
@@ -46,7 +46,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/MName"
+        android:id="@+id/nameET"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_below="@id/NameTV"
@@ -78,7 +78,7 @@
         android:id="@+id/DateTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/MName"
+        android:layout_below="@id/nameET"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/montserrat"
@@ -86,7 +86,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MName" />
+        app:layout_constraintTop_toBottomOf="@+id/nameET" />
 
     <TextView
         android:id="@+id/MTillDays"
@@ -162,103 +162,3 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    tools:context=".controller.main.calendar.PatientAppointmentDetailPage">-->
-
-<!--    <RelativeLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/MedicineName"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_alignParentTop="true"-->
-<!--            android:layout_centerHorizontal="true"-->
-<!--            android:layout_marginTop="50dp"-->
-<!--            android:fontFamily="@font/montserrat"-->
-<!--            android:text="Appointment Name"-->
-<!--            android:textColor="#000000"-->
-<!--            android:textSize="30sp"-->
-<!--            app:layout_constraintStart_toStartOf="parent" />-->
-
-<!--        <LinearLayout-->
-<!--            android:id="@+id/DateLayout"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@id/MedicineName"-->
-<!--            android:layout_marginStart="120dp"-->
-<!--            android:layout_marginTop="100dp"-->
-<!--            android:layout_marginEnd="100dp"-->
-<!--            android:layout_marginBottom="100dp"-->
-<!--            android:layout_weight="2"-->
-<!--            android:orientation="vertical">-->
-
-<!--            <TextView-->
-<!--                android:layout_width="195dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_centerHorizontal="true"-->
-<!--                android:text="Appointment Date"-->
-<!--                android:textSize="24sp" />-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/MedicineDaysTill"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginStart="30dp"-->
-<!--                android:layout_marginTop="20dp"-->
-<!--                android:text="dd/mm/yy"-->
-<!--                android:textSize="24sp" />-->
-<!--        </LinearLayout>-->
-
-<!--        <LinearLayout-->
-<!--            android:id="@+id/TimeLayout"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@id/DateLayout"-->
-<!--            android:layout_marginStart="120dp"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:layout_marginEnd="50dp"-->
-<!--            android:layout_marginBottom="50dp"-->
-<!--            android:layout_weight="2"-->
-<!--            android:orientation="vertical">-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_centerHorizontal="true"-->
-<!--                android:text="Time of the Day"-->
-<!--                android:textSize="24sp" />-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/MedicineTime"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_centerHorizontal="true"-->
-<!--                android:layout_marginStart="30dp"-->
-<!--                android:layout_marginTop="20dp"-->
-<!--                android:text="hh:mm"-->
-<!--                android:textSize="24sp" />-->
-<!--        </LinearLayout>-->
-
-
-<!--        <Button-->
-<!--            android:id="@+id/DeleteApp"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_alignParentBottom="true"-->
-<!--            android:layout_centerHorizontal="true"-->
-<!--            android:layout_marginBottom="600dp"-->
-<!--            android:text="Delete" />-->
-
-<!--    </RelativeLayout>-->
-
-
-<!--</ScrollView>-->
