--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -10,55 +10,57 @@
     tools:context=".controller.main.profile.PatientProfile">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+    <ImageView
+        android:id="@+id/edit_profile_btn"
+        android:layout_width="33dp"
+        android:layout_height="33dp"
+        android:layout_gravity="end"
+        android:layout_margin="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/edit_profile_icon" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/full_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:srcCompat="@drawable/defaultpic" />
 
 
-        <ImageView
-            android:id="@+id/edit_profile_btn"
-            android:layout_width="33dp"
-            android:layout_height="33dp"
-            android:layout_gravity="end"
-            android:layout_margin="10dp"
-            app:srcCompat="@drawable/edit_profile_icon" />
+    <TextView
+        android:id="@+id/full_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/full_name"
+        android:textColor="@color/colorAccent"
+        android:textSize="25sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toTopOf="@+id/emailET"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/emailET"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:fontFamily="@font/montserrat"
+        android:text="email@email.com"
+        android:textColor="#515C6F"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:srcCompat="@drawable/defaultpic" />
-
-
-        <TextView
-            android:id="@+id/full_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat"
-            android:text="@string/full_name"
-            android:textColor="@color/colorAccent"
-            android:textSize="25sp"
-            android:textStyle="normal" />
-
-        <TextView
-            android:id="@+id/email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat"
-            android:text="email@email.com"
-            android:textColor="#515C6F"
-            android:textSize="18sp" />
-
-
-    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout4"
@@ -74,22 +76,44 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
+        <LinearLayout
+            android:layout_width="320dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/delete_button"
+            android:focusable="auto"
             android:id="@+id/alert"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat"
-            android:text="@string/alert"
-            android:textColor="#FF0000"
-            android:textSize="15sp"
-            android:textStyle="normal"
-            android:visibility="gone"
-            />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/verify"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="15dp"
+                app:srcCompat="@drawable/ic_error" />
+
+            <TextView
+                android:id="@+id/alarmMsg"
+                android:layout_width="0dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:fontFamily="@font/montserrat"
+                android:gravity="center_vertical"
+                android:paddingStart="10dp"
+                android:text="To help ensure your account's security please verify your email."
+                android:textColor="@color/white"
+                android:textSize="15sp" />
+
+
+        </LinearLayout>
+
 
         <LinearLayout
-            android:layout_width="350dp"
+            android:layout_width="320dp"
             android:layout_height="54dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/white_background"
             android:clickable="true"
             android:focusable="auto"
@@ -127,7 +151,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="350dp"
+            android:layout_width="320dp"
             android:layout_height="54dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/white_background"
@@ -181,7 +205,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="350dp"
+            android:layout_width="320dp"
             android:layout_height="54dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/white_background"
@@ -240,7 +264,7 @@
             android:layout_width="150dp"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="80dp"
+            android:layout_marginBottom="40dp"
             android:fontFamily="@font/montserrat"
             android:text="@string/logout"
             android:textColor="@color/colorAccent"
