--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -153,15 +153,14 @@
     <TextView
         android:id="@+id/highestday_date"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="21dp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/montserrat"
         android:text="No upcoming appointment"
         android:textColor="#817889"
         android:textSize="15sp"
         android:textStyle="normal"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text3"
