[FIX] : Delete unused files

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,7 +118,7 @@
         android:background="@drawable/overbox"
         android:elevation="9dp"
         android:orientation="vertical"
-        android:visibility="invisible" />
+        android:visibility="visible" />
 
 
 
