--- a/app/src/main/res/layout/activity_patient_appointment_detail_page.xml
+++ b/app/src/main/res/layout/activity_patient_appointment_detail_page.xml
@@ -58,7 +58,7 @@
         android:gravity="center"
         android:background="@drawable/custom_edit_text"
         android:fontFamily="@font/montserrat"
-        android:text="hellp"
+        android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/NameTV" />
