--- a/app/src/main/res/layout/activity_log_in_page.xml
+++ b/app/src/main/res/layout/activity_log_in_page.xml
@@ -5,7 +5,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/main_background"
-    tools:context=".LogInPage">
+    tools:context=".LogInPage"
+    android:id="@+id/LogIn">
 
     <View
         android:id="@+id/white_frame"
