--- a/app/src/main/res/layout/fragment_gad7.xml
+++ b/app/src/main/res/layout/fragment_gad7.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_background">
-
+    android:background="@drawable/main_background"
+    android:id="@+id/fragmentGad">
+    <!-- add this idd needed in test -->
 
     <TextView
         android:id="@+id/titleofscreen"
