--- a/app/src/main/res/layout/my_doctor.xml
+++ b/app/src/main/res/layout/my_doctor.xml
@@ -73,6 +73,7 @@
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/correct"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/emailET"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/DateTV" />
@@ -109,7 +110,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DateTV" />
 
-    <TextView
+  <!--  <TextView
         android:id="@+id/DaeTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -131,10 +132,10 @@
         android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/DaeTV"
-        app:layout_constraintTop_toBottomOf="@+id/emailET" />
+        app:layout_constraintTop_toBottomOf="@+id/emailET" /> -->
 
 
-    <Button
+   <!-- <Button
         android:id="@+id/SaveChanges"
         android:layout_width="0dp"
         android:layout_height="35dp"
@@ -151,13 +152,13 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/delete" />
+        app:layout_constraintStart_toEndOf="@+id/delete" /> -->
 
     <Button
         android:id="@+id/delete"
         android:layout_width="0dp"
         android:layout_height="35dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="140dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="70dp"
         android:background="@drawable/delete_button"
